syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/noueii/gonuxt-starter/pb";


message UpdateUserRequest {
  string username = 1;
  optional string password = 2;
  optional int32  balance = 3;
}

message UpdateUserResponse {
  User user = 1;

}
